Source/WebKit2/UIProcess/WebBackForwardList.cpp
@@ -43,17 +43,28 @@ WebBackForwardList::WebBackForwardList(WebPageProxy* page)
 
 WebBackForwardList::~WebBackForwardList()
 {
+    // A WebBackForwardList should never be destroyed unless it's associated page has been closed or is invalid.
+    ASSERT((!m_page && !m_hasCurrentIndex) || !m_page->isValid());
 }
 
 void WebBackForwardList::pageClosed()
 {
+    // We should have always started out with an m_page and we should never close the page twice.
+    ASSERT(m_page);
+
     if (m_page) {
         size_t size = m_entries.size();
-        for (size_t i = 0; i < size; ++i)
+        for (size_t i = 0; i < size; ++i) {
+            ASSERT(m_entries[i]);
+            if (!m_entries[i])
+                continue;
             m_page->backForwardRemovedItem(m_entries[i]->itemID());
+        }
     }
 
     m_page = 0;
+    m_entries.clear();
+    m_hasCurrentIndex = false;
 }
 
 void WebBackForwardList::addItem(WebBackForwardListItem* newItem)
@@ -81,15 +92,22 @@ void WebBackForwardList::addItem(WebBackForwardListItem* newItem)
             m_page->backForwardRemovedItem(m_entries[0]->itemID());
             removedItems.append(m_entries[0].release());
             m_entries.remove(0);
+
             if (m_entries.isEmpty())
                 m_hasCurrentIndex = false;
             else
                 m_currentIndex--;
         }
     } else {
-        // If we have no current item index, we should have no other entries before adding this new item.
+        // If we have no current item index we should also not have any entries.
+        ASSERT(m_entries.isEmpty());
+
+        // But just in case it does happen in practice we'll get back in to a consistent state now before adding the new item.
         size_t size = m_entries.size();
         for (size_t i = 0; i < size; ++i) {
+            ASSERT(m_entries[i]);
+            if (!m_entries[i])
+                continue;
             m_page->backForwardRemovedItem(m_entries[i]->itemID());
             removedItems.append(m_entries[i].release());
         }
@@ -97,6 +115,7 @@ void WebBackForwardList::addItem(WebBackForwardListItem* newItem)
     }
     
     if (!m_hasCurrentIndex) {
+        ASSERT(m_entries.isEmpty());
         m_currentIndex = 0;
         m_hasCurrentIndex = true;
     } else
@@ -115,7 +134,7 @@ void WebBackForwardList::goToItem(WebBackForwardListItem* item)
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    if (!m_entries.size() || !item)
+    if (!m_entries.size() || !item || !m_page || !m_hasCurrentIndex)
         return;
         
     unsigned index = 0;
@@ -125,8 +144,7 @@ void WebBackForwardList::goToItem(WebBackForwardListItem* item)
     }
     if (index < m_entries.size()) {
         m_currentIndex = index;
-        if (m_page)
-            m_page->didChangeBackForwardList(0, 0);
+        m_page->didChangeBackForwardList(0, 0);
     }
 }
 
@@ -134,28 +152,28 @@ WebBackForwardListItem* WebBackForwardList::currentItem()
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    return m_hasCurrentIndex ? m_entries[m_currentIndex].get() : 0;
+    return m_page && m_hasCurrentIndex ? m_entries[m_currentIndex].get() : 0;
 }
 
 WebBackForwardListItem* WebBackForwardList::backItem()
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    return m_hasCurrentIndex && m_currentIndex ? m_entries[m_currentIndex - 1].get() : 0;
+    return m_page && m_hasCurrentIndex && m_currentIndex ? m_entries[m_currentIndex - 1].get() : 0;
 }
 
 WebBackForwardListItem* WebBackForwardList::forwardItem()
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    return m_hasCurrentIndex && m_entries.size() && m_currentIndex < m_entries.size() - 1 ? m_entries[m_currentIndex + 1].get() : 0;
+    return m_page && m_hasCurrentIndex && m_entries.size() && m_currentIndex < m_entries.size() - 1 ? m_entries[m_currentIndex + 1].get() : 0;
 }
 
 WebBackForwardListItem* WebBackForwardList::itemAtIndex(int index)
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    if (!m_hasCurrentIndex)
+    if (!m_hasCurrentIndex || !m_page)
         return 0;
     
     // Do range checks without doing math on index to avoid overflow.
@@ -172,19 +190,22 @@ int WebBackForwardList::backListCount()
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    return !m_hasCurrentIndex ? 0 : m_currentIndex;
+    return m_page && m_hasCurrentIndex ? m_currentIndex : 0;
 }
 
 int WebBackForwardList::forwardListCount()
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
-    return !m_hasCurrentIndex ? 0 : static_cast<int>(m_entries.size()) - (m_currentIndex + 1);
+    return m_page && m_hasCurrentIndex ? m_entries.size() - (m_currentIndex + 1) : 0;
 }
 
 PassRefPtr<ImmutableArray> WebBackForwardList::backListAsImmutableArrayWithLimit(unsigned limit)
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
+
+    if (!m_page || !m_hasCurrentIndex)
+        return ImmutableArray::create();
 
     unsigned backListSize = static_cast<unsigned>(backListCount());
     unsigned size = std::min(backListSize, limit);
@@ -195,8 +216,10 @@ PassRefPtr<ImmutableArray> WebBackForwardList::backListAsImmutableArrayWithLimit
     vector.reserveInitialCapacity(size);
 
     ASSERT(backListSize >= size);
-    for (unsigned i = backListSize - size; i < backListSize; ++i)
+    for (unsigned i = backListSize - size; i < backListSize; ++i) {
+        ASSERT(m_entries[i]);
         vector.uncheckedAppend(m_entries[i].get());
+    }
 
     return ImmutableArray::adopt(vector);
 }
@@ -204,6 +227,9 @@ PassRefPtr<ImmutableArray> WebBackForwardList::backListAsImmutableArrayWithLimit
 PassRefPtr<ImmutableArray> WebBackForwardList::forwardListAsImmutableArrayWithLimit(unsigned limit)
 {
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
+
+    if (!m_page || !m_hasCurrentIndex)
+        return ImmutableArray::create();
 
     unsigned size = std::min(static_cast<unsigned>(forwardListCount()), limit);
     if (!size)
@@ -214,8 +240,10 @@ PassRefPtr<ImmutableArray> WebBackForwardList::forwardListAsImmutableArrayWithLi
 
     unsigned last = m_currentIndex + size;
     ASSERT(last < m_entries.size());
-    for (unsigned i = m_currentIndex + 1; i <= last; ++i)
+    for (unsigned i = m_currentIndex + 1; i <= last; ++i) {
+        ASSERT(m_entries[i]);
         vector.uncheckedAppend(m_entries[i].get());
+    }
 
     return ImmutableArray::adopt(vector);
 }
@@ -225,22 +253,42 @@ void WebBackForwardList::clear()
     ASSERT(!m_hasCurrentIndex || m_currentIndex < m_entries.size());
 
     size_t size = m_entries.size();
-    if (size <= 1)
+    if (!m_page || size <= 1)
         return;
 
     RefPtr<WebBackForwardListItem> currentItem = this->currentItem();
+    Vector<RefPtr<APIObject> > removedItems;
 
-    if (m_page) {
+    if (!currentItem) {
+        // We should only ever have no current item if we also have no current item index.
+        ASSERT(!m_hasCurrentIndex);
+
+        // But just in case it does happen in practice we should get back into a consistent state now.
         for (size_t i = 0; i < size; ++i) {
-            if (m_entries[i] != currentItem)
-                m_page->backForwardRemovedItem(m_entries[i]->itemID());
+            ASSERT(m_entries[i]);
+            if (!m_entries[i])
+                continue;
+
+            m_page->backForwardRemovedItem(m_entries[i]->itemID());
+            removedItems.append(m_entries[i].release());
         }
+
+        m_entries.clear();
+        m_hasCurrentIndex = false;
+        m_page->didChangeBackForwardList(0, &removedItems);
+
+        return;
     }
 
-    Vector<RefPtr<APIObject> > removedItems;
-    removedItems.reserveCapacity(m_entries.size() - 1);
-    for (size_t i = 0; i < m_entries.size(); ++i) {
-        if (i != m_currentIndex)
+    for (size_t i = 0; i < size; ++i) {
+        ASSERT(m_entries[i]);
+        if (m_entries[i] && m_entries[i] != currentItem)
+            m_page->backForwardRemovedItem(m_entries[i]->itemID());
+    }
+
+    removedItems.reserveCapacity(size - 1);
+    for (size_t i = 0; i < size; ++i) {
+        if (i != m_currentIndex && m_hasCurrentIndex && m_entries[i])
             removedItems.append(m_entries[i].release());
     }
 
@@ -254,8 +302,7 @@ void WebBackForwardList::clear()
         m_hasCurrentIndex = false;
     }
 
-    if (m_page)
-        m_page->didChangeBackForwardList(0, &removedItems);
+    m_page->didChangeBackForwardList(0, &removedItems);
 }
 
 } // namespace WebKit
